# CV

./: HSE_Lab_(linear_regression)_24_25.ipynb  Лабораторная работа 2 Часть 2 МА1 ПМИ Антропенко Анна Александровна Вариант 10.ipynb
image_processor/: CMakeLists.txt  image_processor.cpp
image_processor/src/: args.cpp  blur.cpp  bmp_encoder.cpp  crop.cpp  edge.cpp  false.cpp  filter.cpp  grayscale.cpp  negative.cpp  processor.cpp  sharpen.cpp
image_processor/src/utility/: args.h  blur.h  bmp_encoder.h  crop.h  edge.h  false.h  filter.h  grayscale.h  negative.h  processor.h  sharpen.h
